--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          </div>
       </div>
       <div id="tags" class="list-page span4">
-         <h1>Tags</h1>
+         <h1>Other Tags</h1>
          <div class="list-area">
             <!-- <p>Select a trail from the left</p> -->
             <ul class="multi-list multiple">
@@ -52,7 +52,7 @@
 
    <div class="row-fluid lower">
       <div class="list-page span2">
-         <h1>Tags <button id="add-button" class="btn btn-success"><i class="icon-plus icon-white"></i></button></h1>
+         <h1> My Tags <button id="add-button" class="btn btn-success"><i class="icon-plus icon-white"></i></button></h1>
          <div class="list-area tags">
             <ul class="multi-list">
                <li><span class="label label-info">trail:INFO_111</span></li>
