removed default values in login fields

--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
             <div class="control-group">
                <label class="control-label" for="acct">Account</label>
                <div class="controls">
-                  <input type="text" name="acct" id="acct" value="iolab_trailmaker">
+                  <input type="text" name="acct" id="acct">
                </div>
             </div>
             <div class="control-group">
                <label class="control-label" for="pwd">Password</label>
                <div class="controls">
-                  <input type="password" name="pwd" id="pwd" value="iolabtrailmaker">
+                  <input type="password" name="pwd" id="pwd">
                </div>
             </div>
          </form>
