--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
       </div>
       <div id="step-tags" class="list-page span4">
          <h1>Other Tags</h1>
+         
          <div class="list-area">
-            <!-- <p>Select a trail from the left</p> -->
+            <p>Select a trail from the left</p>
             <ul class="multi-list multiple">
                <!-- <li>step:1</li>
                <li>step:2</li>
